@startuml

hide circle
skinparam classAttributeIconSize 0


    class LogExpenseCommand {
        + LogExpenseCommand(String input)
        + void execute(...)
        - Expense extractExpense(String input)
}

    abstract class "{abstract} \n Command" {
        + CommandType: commandType
        + Command()
    }

class Expense {
    + String getCategory()
    + String getDescription()
    + Double getAmount()
    + String getDate()
    + Expense(String category, String description, Double amount, String date)
}

class ExpenseList {
    + void add(Expense expense)
}

class DateValidator {
    + static boolean isValidDate(String date)
}

LogExpenseCommand --> Expense : creates
LogExpenseCommand --> ExpenseList : modifies
LogExpenseCommand --> DateValidator : uses
"{abstract} \n Command" <|-- LogExpenseCommand : extends

@enduml
